# space-investigator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  cog.toml  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  pages.yml  release.yml  stale-prs.yml
docs/: index.html
src/: main.rs
