[package]
name = "space-investigator"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Parallel disk space analyzer. Finds the largest files and directories on any filesystem."
repository = "https://github.com/gremlinltd/space-investigator"
homepage = "https://trozz.github.io/space-investigator"
readme = "README.md"
keywords = ["disk", "space", "du", "filesystem", "cli"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "si"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
sysinfo = "0.38"
jwalk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
